--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "webpack --mode development",
     "build": "webpack --mode production",
     "dev": "webpack-dev-server --open",
-    "deploy": "gh-page -d build"
+    "deploy": "gh-pages -d build"
   },
   "keywords": [],
   "author": "",
